<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.happyHoursMenu.controller.HappyHourActivity">

    <include
        android:id="@+id/include2"
        layout="@layout/custom_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/include3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <include
        android:id="@+id/include3"
        layout="@layout/restaurant_name_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2" />


    <TextView
        android:id="@+id/reverseHHMenuTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/blue_btn_bg"
        android:fontFamily="@font/whitneybook"
        android:lineSpacingExtra="5sp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/reverse_hh_menu"
        android:textColor="#fafafa"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@+id/reverseHHDetailsTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include3" />

    <TextView
        android:id="@+id/reverseHHDetailsTextView"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/whitneybook"
        android:textStyle="normal"
        android:textSize="14sp"
        android:textColor="@color/light_black"
        android:lineSpacingExtra="5sp"
        android:text="@string/reverse_hh_details"
        app:layout_constraintEnd_toStartOf="@+id/reverseHHItemsTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/reverseHHMenuTextView"
        app:layout_constraintTop_toTopOf="@+id/reverseHHMenuTextView"
        android:background="@drawable/un_selected_hh_details_bg"/>

    <TextView
        android:id="@+id/reverseHHItemsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/un_selected_hh_details_bg"
        android:fontFamily="@font/whitneybook"
        android:lineSpacingExtra="5sp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/reverse_hh_items"
        android:textColor="@color/light_black"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/reverseHHDetailsTextView"
        app:layout_constraintTop_toTopOf="@+id/reverseHHDetailsTextView" />


    <FrameLayout
        android:id="@+id/restaurant_reverse_hh_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reverseHHMenuTextView">

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>