<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <include
        layout="@layout/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/term_and_cond_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/whitneybook"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="8sp"
                android:text="@string/by_continuing_you_agree_to_5_live_s_terms_of_service_and_acknowledge_5_live_s_privacy_policy"
                android:textColor="@color/light_black"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/privacy_policy_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/whitneybook"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="8sp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="30dp"
                android:text="@string/privacy_policy"
                android:textColor="@color/light_black"
                android:textSize="12sp"
                android:textStyle="normal" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTIL"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/whitneybook"
                android:hint="Email/Phone Number"
                android:lineSpacingExtra="5sp"
                android:textColor="@color/dark_gray_color"
                android:textSize="16sp"
                android:textStyle="normal"
                tools:text="Email/Phone Number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailAddress_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/whitneymedium"
                    android:textStyle="normal"
                    android:singleLine="true"
                    android:textSize="18sp"
                    android:textColor="#4b5865"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTIL"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/whitneybook"
                android:hint="Password"
                android:lineSpacingExtra="5sp"
                android:textColor="@color/dark_gray_color"
                android:textSize="16sp"
                android:textStyle="normal"
                app:endIconMode="password_toggle"
                tools:text="Password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:fontFamily="@font/whitneymedium"
                    android:textStyle="normal"
                    android:textSize="18sp"
                    android:textColor="#4b5865"/>

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <TextView
                    android:id="@+id/forgotPasswordTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/whitneymedium"
                    android:lineSpacingExtra="5sp"
                    android:text="Forgot Password?"
                    android:textColor="#4b5865"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    tools:text="Forgot password?" />
            </LinearLayout>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/blue_btn_bg"
                android:fontFamily="@font/whitney_semibold"
                android:letterSpacing="-0.01"
                android:lineSpacingExtra="6sp"
                android:text="Log In"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="normal" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:background="#a9b5c7" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/whitneybook"
                    android:gravity="center"
                    android:lineSpacingExtra="5sp"
                    android:text="Log In With Social"
                    android:textColor="@color/light_black"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:background="#a9b5c7" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/facebookImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/facebook_1" />


                <ImageView
                    android:id="@+id/googleImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/google" />

            </LinearLayout>


            <TextView
                android:id="@+id/signUpTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:fontFamily="@font/whitneymedium"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="5sp"
                android:text="@string/don_t_have_a_5_live_account_sign_up"
                android:textColor="#4b5865"
                android:textSize="16sp"
                android:textStyle="normal" />


        </LinearLayout>


    </ScrollView>

    <!--<include layout="@layout/restaurant_bottom_sheet" />-->
</LinearLayout>